@@ -1,3 +1,8 @@
+2007-12-26  Per Bothner  <per@bothner.com>
+
+	* AttributeAxis.java (scan): Add correct stop condition.
+	Fixes Red Hat Bugzilla #370851 "XQuery miss-search".
+
 2007-11-04  Per Bothner  <per@bothner.com>
 
 	* XmlNamespace.java: Add missing support for pre-JAVA5.
